--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "parcel src/index.html",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "npx parcel src/index.html",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "npx parcel build src/index.html"
     },
     "keywords": [],
     "author": "",
@@ -14,6 +15,7 @@
         "c": "^1.1.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-modal": "^3.13.1",
         "style.css": "^1.0.0"
     },
     "devDependencies": {
