--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "c": "^1.1.1",
+        "parcel": "^2.0.0-beta.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-modal": "^3.13.1",
